display : fixing on mobile

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -165,7 +165,6 @@ body {
 @media only screen and (max-width: 990px) {
   .playground-2212 {
     flex-direction: column;
-    font-size: 4px;
   }
 }
 
@@ -185,6 +184,10 @@ body {
 
   .playground {
     margin-top: .3em;
+  }
+
+  .playground-2212 {
+    font-size: 4px;
   }
 
   .btn {
